--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "E3_HACKER_MD",
+  "name": "BAN-MD",
   "version": "4.5.0",
-  "description": "A WhatsApp Bot Created By E3_HACKER_MD Official",
+  "description": "A WhatsApp Bot Created By KHAREL BANKS  Official",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name E3_HACKER_MD",
