--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pm2": "^6.0.5",
     "util": "^0.12.4",
     "express": "latest",
+    "express-session": "^1.17.3",  // Added this line
     "moment-timezone": "^0.5.45",
     "axios": "^1.2.5",
     "crypto-digest-sync": "^1.0.0",
@@ -35,20 +36,5 @@
     "megajs": "^1.1.0",
     "pdfkit": "^0.14.0",
     "wa_set_pkg": "1.0.5",
-    "wa-sticker-formatter": "^4.4.4",
-    "path": "^0.12.7",
-    "vm": "^0.1.0",
-    "adm-zip": "^0.5.16",
-    "cheerio": "^1.0.0-rc.12",
-    "ruhend-scraper" : "8.0.3",
-    "qrcode-terminal": "^0.12.0",
-    "yt-search":"2.11.1",
-    "sequelize": "^6.37.5",
-    "sqlite3": "^5.1.7",
-    "vm": "^0.1.0",
-    "api-dylux":"1.8.5",
-    "@mrnima/tiktok-downloader":"1.0.0",
-    "@mrnima/facebook-downloader":"1.0.0",
-    "mrnima-moviedl":"1.0.0"
-  }
-}
+    "wa-s
+
